--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body style="font-family:Arial;">
-
+    <div class="container">
+        <div class="row">
+            <div class="logo-center">
+                <img src="images/paw_logo.png" class="center">
+            </div>
+        </div>
+        <div class="row center-block text-center">
+            <div class="logo-text">
+                <p>KEEP PAWS POSTED</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
