Added lexend font

--- a/public/nutrition/main.html
+++ b/public/nutrition/main.html
@@ -13,20 +13,10 @@
 
 <body style="font-family:Arial;">
     <div class="container">
-        <div class="row">
-            <div class="logo-center">
-                <img src="images/paw_logo.png" class="center">
+        <div class="row title">
+            <div class="col-12">
+                Barney's Meals
             </div>
-        </div>
-        <div class="row center-block text-center">
-            <div class="logo-text">
-                <p>KEEP PAWS POSTED</p>
-            </div>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-            <a href="/nutrition/main.html">Nutrition</a>
         </div>
     </div>
 
