--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <!-- <script src="main.js"></script> -->
 </head>
 
-<body style="font-family:Arial;">
+<body class="title-background">
     <div class="container">
         <div class="row">
             <div class="logo-center">
@@ -20,7 +20,7 @@
         </div>
         <div class="row center-block text-center">
             <div class="logo-text">
-                <p>KEEP PAWS POSTED</p>
+                <p>Keep Paws Posted</p>
             </div>
         </div>
         <br>
