--- a/public/nutrition/main.html
+++ b/public/nutrition/main.html
@@ -11,11 +11,45 @@
 <!-- <script src="main.js"></script> -->
 </head>
 
-<body style="font-family:Arial;">
+<body>
     <div class="container">
-        <div class="row title">
+        <div class="row mt-4 title">
             <div class="col-12">
-                Barney's Meals
+                Today's Meals
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-3 justify-content-center">
+                <div class="row">
+                    <img src="../images/food_item_1.png" class="food-item">
+                </div>
+                <div class="row justify-content-center">
+                    Water
+                </div>
+            </div>
+            <div class="col-3 justify-content-center">
+                <div class="row">
+                    <img src="../images/food_item_2.png" class="food-item">
+                </div>
+                <div class="row justify-content-center">
+                    Meat
+                </div>
+            </div>
+            <div class="col-3 justify-content-center">
+                <div class="row">
+                    <img src="../images/food_item_3.png" class="food-item">
+                </div>
+                <div class="row justify-content-center">
+                    Apple
+                </div>
+            </div>
+            <div class="col-3 justify-content-center">
+                <div class="row">
+                    <img src="../images/food_item_add.png" class="food-item">
+                </div>
+                <div class="row justify-content-center">
+                    Add...
+                </div>
             </div>
         </div>
     </div>
