Add nutrition and suggestion section

--- a/public/nutrition/main.html
+++ b/public/nutrition/main.html
@@ -23,32 +23,153 @@
                 <div class="row">
                     <img src="../images/food_item_1.png" class="food-item">
                 </div>
-                <div class="row justify-content-center">
+                <div class="row food-name justify-content-center">
                     Water
+                </div>
+                <div class="row food-amount justify-content-center">
+                    400ml
                 </div>
             </div>
             <div class="col-3 justify-content-center">
                 <div class="row">
                     <img src="../images/food_item_2.png" class="food-item">
                 </div>
-                <div class="row justify-content-center">
+                <div class="row food-name justify-content-center">
                     Meat
+                </div>
+                <div class="row food-amount justify-content-center">
+                    200g
                 </div>
             </div>
             <div class="col-3 justify-content-center">
                 <div class="row">
                     <img src="../images/food_item_3.png" class="food-item">
                 </div>
-                <div class="row justify-content-center">
+                <div class="row food-name justify-content-center">
                     Apple
+                </div>
+                <div class="row food-amount justify-content-center">
+                    100g
                 </div>
             </div>
             <div class="col-3 justify-content-center">
                 <div class="row">
                     <img src="../images/food_item_add.png" class="food-item">
                 </div>
-                <div class="row justify-content-center">
+                <div class="row food-name justify-content-center">
                     Add...
+                </div>
+                <div class="row food-amount justify-content-center">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4 title">
+            <div class="col-12">
+                Nutrition
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2 nutrition-name">
+                Water
+            </div>
+            <div class="col-2 nutrition-amount">
+                400ml
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2 nutrition-name">
+                Protein
+            </div>
+            <div class="col-2 nutrition-amount">
+                50g
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2 nutrition-name">
+                Fat
+            </div>
+            <div class="col-2 nutrition-amount">
+                30g
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row mt-4 title">
+            <div class="col-12">
+                Suggestion
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 nutrition-name">
+                Water
+            </div>
+            <div class="col-8">
+                <div class="text-success">
+                    OK
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 nutrition-name">
+                Protein
+            </div>
+            <div class="col-8">
+                <div class="text-success">
+                    OK
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4 nutrition-name">
+                Fat
+            </div>
+            <div class="col-8">
+                <div class="text-danger">
+                    Too little (Need 5g more)
                 </div>
             </div>
         </div>
