--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <br>
         <br>
         <div class="row">
-            <a href="/nutrition/main.html">Nutrition</a>
+            <a href="/food/main.html">Nutrition</a>
         </div>
     </div>
 
