--- a/public/food/main.html
+++ b/public/food/main.html
@@ -13,62 +13,69 @@
 
 <body>
     <div class="container">
-        <div class="row mt-4 title">
+        <div class="row mt-4 mb-2 title">
             <div class="col-12">
-                Today's Meals
+                Meals
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-3 justify-content-center">
-                <div class="row">
-                    <img src="../images/food_item_1.png" class="food-item">
+        <div class="container rounded section-background pt-1 pb-1">
+            <div class="row mt-3 mb-2">
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_1.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Water
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        400ml
+                    </div>
                 </div>
-                <div class="row food-name justify-content-center">
-                    Water
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_2.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Meat
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        200g
+                    </div>
                 </div>
-                <div class="row food-amount justify-content-center">
-                    400ml
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_3.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Apple
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        100g
+                    </div>
                 </div>
-            </div>
-            <div class="col-3 justify-content-center">
-                <div class="row">
-                    <img src="../images/food_item_2.png" class="food-item">
-                </div>
-                <div class="row food-name justify-content-center">
-                    Meat
-                </div>
-                <div class="row food-amount justify-content-center">
-                    200g
-                </div>
-            </div>
-            <div class="col-3 justify-content-center">
-                <div class="row">
-                    <img src="../images/food_item_3.png" class="food-item">
-                </div>
-                <div class="row food-name justify-content-center">
-                    Apple
-                </div>
-                <div class="row food-amount justify-content-center">
-                    100g
-                </div>
-            </div>
-            <div class="col-3 justify-content-center">
-                <div class="row">
-                    <img src="../images/food_item_add.png" class="food-item">
-                </div>
-                <div class="row food-name justify-content-center">
-                    Add...
-                </div>
-                <div class="row food-amount justify-content-center">
-                    
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_add.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Add...
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row mt-4 title">
+
+        <div class="row mt-4 mb-2 title">
             <div class="col-12">
                 Nutrition
             </div>
         </div>
+        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                Amounts
+            </div>
         <div class="row mt-3">
             <div class="col-4"></div>
             <div class="col-3 axis-value text-start">
@@ -138,41 +145,86 @@
                 <img src="../images/axis_new.png" class="axis">
             </div>
         </div>
-        <div class="row mt-4 title">
+        </div>
+        <br>
+        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                Summary
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Water
+                </div>
+                <div class="col-8">
+                    <div class="text-success">
+                        OK
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Protein
+                </div>
+                <div class="col-8">
+                    <div class="text-success">
+                        OK
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Fat
+                </div>
+                <div class="col-8">
+                    <div class="text-danger">
+                        Too little (Need 5g more)
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4 mb-2 title">
             <div class="col-12">
-                Suggestion
+                Suggestions
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-4 nutrition-name">
-                Water
-            </div>
-            <div class="col-8">
-                <div class="text-success">
-                    OK
+        <div class="container rounded section-background pt-1 pb-2">
+            <div class="row mt-3">
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_1.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Water
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        400ml
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_2.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Meat
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        200g
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_3.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Apple
+                    </div>
+                    <div class="row food-amount justify-content-center">
+                        100g
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-4 nutrition-name">
-                Protein
-            </div>
-            <div class="col-8">
-                <div class="text-success">
-                    OK
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-4 nutrition-name">
-                Fat
-            </div>
-            <div class="col-8">
-                <div class="text-danger">
-                    Too little (Need 5g more)
-                </div>
-            </div>
-        </div>
+        <br>
     </div>
 
 </body>
