--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,15 @@
                 <p>Keep Paws Posted</p>
             </div>
         </div>
-        <br>
-        <br>
+        <br><br><br><br>
         <div class="row">
             <a href="/food/main.html">Nutrition</a>
+        </div>
+        <br><br><br><br>
+        <div class="d-flex justify-content-center m-5">
+            <div class="spinner-border text-primary loading" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
         </div>
     </div>
 
