--- a/public/food/main.html
+++ b/public/food/main.html
@@ -74,82 +74,7 @@
         </div>
         <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
             <div class="col-12 subtitle">
-                Amounts
-            </div>
-        <div class="row mt-3">
-            <div class="col-4"></div>
-            <div class="col-3 axis-value text-start">
-                Too little
-            </div>
-            <div class="col-2 axis-value text-center">
-                OK
-            </div>
-            <div class="col-3 axis-value text-end">
-                Too much
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-2 nutrition-name">
-                Water
-            </div>
-            <div class="col-2 nutrition-amount">
-                400ml
-            </div>
-            <div class="col-8">
-                <img src="../images/axis_new.png" class="axis">
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-4"></div>
-            <div class="col-3 axis-value text-start">
-                Too little
-            </div>
-            <div class="col-2 axis-value text-center">
-                OK
-            </div>
-            <div class="col-3 axis-value text-end">
-                Too much
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-2 nutrition-name">
-                Protein
-            </div>
-            <div class="col-2 nutrition-amount">
-                50g
-            </div>
-            <div class="col-8">
-                <img src="../images/axis_new.png" class="axis">
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-4"></div>
-            <div class="col-3 axis-value text-start">
-                Too little
-            </div>
-            <div class="col-2 axis-value text-center">
-                OK
-            </div>
-            <div class="col-3 axis-value text-end">
-                Too much
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-2 nutrition-name">
-                Fat
-            </div>
-            <div class="col-2 nutrition-amount">
-                30g
-            </div>
-            <div class="col-8">
-                <img src="../images/axis_new.png" class="axis">
-            </div>
-        </div>
-        </div>
-        <br>
-        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
-            <div class="col-12 subtitle">
-                Summary
+                Overview
             </div>
             <div class="row mt-3">
                 <div class="col-4 nutrition-name">
@@ -158,6 +83,9 @@
                 <div class="col-8">
                     <div class="text-success">
                         OK
+                    </div>
+                    <div>
+                        It has the right amount!
                     </div>
                 </div>
             </div>
@@ -169,6 +97,9 @@
                     <div class="text-success">
                         OK
                     </div>
+                    <div>
+                        It has the right amount!
+                    </div>
                 </div>
             </div>
             <div class="row mt-3">
@@ -177,10 +108,109 @@
                 </div>
                 <div class="col-8">
                     <div class="text-danger">
-                        Too little (Need 5g more)
+                        Too little
+                    </div>
+                    <div class="text-danger">
+                        Need at least 5g more.
                     </div>
                 </div>
             </div>
+        </div>
+        <br>
+        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                Analysis
+            </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Water
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">200ml</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Protein
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Fat
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight">
+            </div>
+        </div>
         </div>
         <div class="row mt-4 mb-2 title">
             <div class="col-12">
