--- a/public/food/main.html
+++ b/public/food/main.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/styles.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="../js/food.js"></script>
 <!-- <script src="main.js"></script> -->
 </head>
 
@@ -54,14 +56,31 @@
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
-                    <div class="row">
-                        <img src="../images/food_item_add.png" class="food-item">
+                    <div id="add-button">
+                        <div class="row">
+                            <img src="../images/food_item_add.png" class="food-item">
+                        </div>
+                        <div class="row food-name justify-content-center">
+                            Add...
+                        </div>
                     </div>
-                    <div class="row food-name justify-content-center">
-                        Add...
+                </div>
+            </div>
+        </div>
+        <div class="container rounded pt-2 pb-2" id="add-menu" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                Add an item
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Water
+                </div>
+                <div class="col-8">
+                    <div class="text-success">
+                        OK
                     </div>
-                    <div class="row food-amount justify-content-center">
-                        
+                    <div>
+                        It has the right amount!
                     </div>
                 </div>
             </div>
@@ -91,7 +110,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4 nutrition-name">
-                    Protein
+                    Proteins
                 </div>
                 <div class="col-8">
                     <div class="text-success">
@@ -104,7 +123,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4 nutrition-name">
-                    Fat
+                    Fats
                 </div>
                 <div class="col-8">
                     <div class="text-danger">
@@ -112,6 +131,19 @@
                     </div>
                     <div class="text-danger">
                         Need at least 5g more.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Calories
+                </div>
+                <div class="col-8">
+                    <div class="text-danger">
+                        Too much
+                    </div>
+                    <div>
+                        Have less tomorrow.
                     </div>
                 </div>
             </div>
@@ -148,7 +180,7 @@
             <div class="col-2">
                 <img src="../images/axis_pointer.png" class="axis-pointer">
             </div>
-            <div class="col-3 value-highlight">
+            <div class="col-3 value-highlight-right">
             </div>
         </div>
         <div class="row mt-3">
@@ -165,7 +197,7 @@
         </div>
         <div class="row">
             <div class="col-4 nutrition-name">
-                Protein
+                Proteins
             </div>
             <div class="col-8">
                 <img src="../images/axis_new.png" class="axis">
@@ -178,7 +210,7 @@
             <div class="col-2">
                 <img src="../images/axis_pointer.png" class="axis-pointer">
             </div>
-            <div class="col-3 value-highlight">
+            <div class="col-3 value-highlight-wrong">
             </div>
         </div>
         <div class="row mt-3">
@@ -195,7 +227,7 @@
         </div>
         <div class="row">
             <div class="col-4 nutrition-name">
-                Fat
+                Fats
             </div>
             <div class="col-8">
                 <img src="../images/axis_new.png" class="axis">
@@ -208,7 +240,7 @@
             <div class="col-2">
                 <img src="../images/axis_pointer.png" class="axis-pointer">
             </div>
-            <div class="col-3 value-highlight">
+            <div class="col-3 value-highlight-wrong">
             </div>
         </div>
         </div>
