--- a/public/food/main.html
+++ b/public/food/main.html
@@ -58,9 +58,9 @@
                 <div class="col-3 justify-content-center">
                     <div id="add-button">
                         <div class="row">
-                            <img src="../images/food_item_add.png" class="food-item">
+                            <img src="../images/food_item_add.png" class="food-item" id="add-image">
                         </div>
-                        <div class="row food-name justify-content-center">
+                        <div class="row food-name justify-content-center" id="add-text">
                             Add...
                         </div>
                     </div>
