--- a/public/food/main.html
+++ b/public/food/main.html
@@ -71,16 +71,29 @@
             <div class="col-12 subtitle">
                 Add an item
             </div>
-            <div class="row mt-3">
-                <div class="col-4 nutrition-name">
-                    Water
-                </div>
-                <div class="col-8">
-                    <div class="text-success">
-                        OK
+            <div class="row mt-3 mb-2">
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_4.png" class="food-item">
                     </div>
-                    <div>
-                        It has the right amount!
+                    <div class="row food-name justify-content-center">
+                        Carrot
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_5.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Chicken
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_item_6.png" class="food-item">
+                    </div>
+                    <div class="row food-name justify-content-center">
+                        Banana
                     </div>
                 </div>
             </div>
