--- a/public/food/main.html
+++ b/public/food/main.html
@@ -30,7 +30,7 @@
                         Water
                     </div>
                     <div class="row food-amount justify-content-center">
-                        400ml
+                        400g
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
@@ -94,6 +94,51 @@
                     </div>
                     <div class="row food-name justify-content-center">
                         Banana
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container rounded amount-change pt-2 pb-2" id="amount-enter">
+            <div class="col-12 subtitle">
+                Amount change
+            </div>
+            <div class="row align-items-center mt-3 mb-2">
+                <div class="col-6 justify-content-center">
+                    <div class="input-group">
+                        <input type="text" class="form-control" aria-label="Amount" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <span class="input-group-text" id="basic-addon2">g</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/discard.png" class="discard-item">
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/confirm.png" class="confirm-item">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container rounded are-you-sure pt-2 pb-2" id="are-you-sure">
+            <div class="col-12 subtitle">
+                Are you sure?
+            </div>
+            <div class="row align-items-center mt-3 mb-2">
+                <div class="col-6 justify-content-center are-you-sure-text">
+                    Do you want to delete this food item?
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/confirm.png" class="discard-confirm">
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/cancel.png" class="discard-cancel">
                     </div>
                 </div>
             </div>
@@ -188,7 +233,7 @@
         </div>
         <div class="row axis-shift">
             <div class="col-3 text-end">
-                <div class="nutrition-amount text-center">200ml</div>
+                <div class="nutrition-amount text-center">200g</div>
             </div>
             <div class="col-2">
                 <img src="../images/axis_pointer.png" class="axis-pointer">
@@ -272,7 +317,7 @@
                         Water
                     </div>
                     <div class="row food-amount justify-content-center">
-                        400ml
+                        400g
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
