--- a/public/food/main.html
+++ b/public/food/main.html
@@ -113,12 +113,12 @@
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/discard.png" class="discard-item">
+                        <img src="../images/discard.png" id="discard-item">
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/confirm.png" class="confirm-item">
+                        <img src="../images/confirm.png" id="confirm-item">
                     </div>
                 </div>
             </div>
@@ -133,12 +133,12 @@
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/confirm.png" class="discard-confirm">
+                        <img src="../images/confirm.png" id="discard-confirm">
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/cancel.png" class="discard-cancel">
+                        <img src="../images/cancel.png" id="discard-cancel">
                     </div>
                 </div>
             </div>
