--- a/public/food/main.html
+++ b/public/food/main.html
@@ -20,8 +20,8 @@
                 Meals
             </div>
         </div>
-        <div class="container rounded section-background pt-1 pb-1">
-            <div class="row mt-3 mb-2">
+        <div class="container-fluid rounded section-background pt-1 pb-1">
+            <div class="scrolling-wrapper row flex-row flex-nowrap mt-3 mb-2">
                 <div class="col-3 justify-content-center">
                     <div class="row">
                         <img src="../images/food_item_1.png" class="food-item">
@@ -113,12 +113,12 @@
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/discard.png" id="discard-item">
+                        <img src="../images/food_discard.png" id="discard-item">
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/confirm.png" id="confirm-item">
+                        <img src="../images/food_confirm.png" id="confirm-item">
                     </div>
                 </div>
             </div>
@@ -133,12 +133,12 @@
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/confirm.png" id="discard-confirm">
+                        <img src="../images/food_confirm.png" id="discard-confirm">
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/cancel.png" id="discard-cancel">
+                        <img src="../images/food_cancel.png" id="discard-cancel">
                     </div>
                 </div>
             </div>
@@ -286,6 +286,36 @@
         <div class="row">
             <div class="col-4 nutrition-name">
                 Fats
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight-wrong">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Calories
             </div>
             <div class="col-8">
                 <img src="../images/axis_new.png" class="axis">
