dynamic food list

--- a/public/food/main.html
+++ b/public/food/main.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="container-fluid rounded section-background pt-1 pb-1">
-            <div class="scrolling-wrapper row flex-row flex-nowrap mt-3 mb-2">
+            <div class="scrolling-wrapper row flex-row flex-nowrap mt-3 mb-2" id="meals">
                 <div class="col-3 justify-content-center">
                     <div class="row">
                         <img src="../images/food_item_1.png" class="food-item">
@@ -65,6 +65,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row justify-content-center" id="scroll-hint">
+                ← Scroll left/right to view or add items →
             </div>
         </div>
         <div class="container rounded pt-2 pb-2" id="add-menu" style="border:2px solid #D9D9D9">
