--- a/public/food/main.html
+++ b/public/food/main.html
@@ -67,14 +67,14 @@
                 </div>
             </div>
             <div class="row justify-content-center" id="scroll-hint">
-                ← Scroll left/right to view or add items →
+                ← Scroll left/right to view or add →
             </div>
         </div>
-        <div class="container rounded pt-2 pb-2" id="add-menu" style="border:2px solid #D9D9D9">
+        <div class="container-fluid rounded pt-2 pb-2" id="add-menu" style="border:2px solid #D9D9D9">
             <div class="col-12 subtitle">
                 Add an item
             </div>
-            <div class="row mt-3 mb-2">
+            <div class="scrolling-wrapper row flex-row flex-nowrap mt-3 mb-2" id="adds">
                 <div class="col-3 justify-content-center">
                     <div class="row">
                         <img src="../images/food_item_4.png" class="food-item">
@@ -99,6 +99,9 @@
                         Banana
                     </div>
                 </div>
+            </div>
+            <div class="row justify-content-center" id="scroll-add-hint">
+                ← Scroll left/right to view more →
             </div>
         </div>
         <div class="container rounded amount-change pt-2 pb-2" id="amount-enter">
