--- a/public/food/main.html
+++ b/public/food/main.html
@@ -70,6 +70,54 @@
                 ← Scroll left/right to view or add →
             </div>
         </div>
+
+        <div class="container rounded amount-change pt-2 pb-2" id="amount-change">
+            <div class="col-12 subtitle">
+                Amount Change
+            </div>
+            <div class="row align-items-center mt-3 mb-2">
+                <div class="col-6 justify-content-center">
+                    <div class="input-group">
+                        <input type="text" id="amount-change-number" class="form-control" aria-label="Amount" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                          <span class="input-group-text" id="basic-addon2">g</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_discard.png" id="discard-item">
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_confirm.png" id="confirm-item">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container rounded are-you-sure pt-2 pb-2" id="are-you-sure">
+            <div class="col-12 subtitle">
+                Are you sure?
+            </div>
+            <div class="row align-items-center mt-3 mb-2">
+                <div class="col-6 justify-content-center are-you-sure-text">
+                    Do you want to delete this food item?
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_confirm.png" id="discard-confirm">
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_cancel.png" id="discard-cancel">
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="container-fluid rounded pt-2 pb-2" id="add-menu" style="border:2px solid #D9D9D9">
             <div class="col-12 subtitle">
                 Add an item
@@ -104,47 +152,25 @@
                 ← Scroll left/right to view more →
             </div>
         </div>
-        <div class="container rounded amount-change pt-2 pb-2" id="amount-enter">
+
+        <div class="container rounded amount-change pt-2 pb-2" id="amount-add">
             <div class="col-12 subtitle">
-                Amount change
+                Amount Add
             </div>
             <div class="row align-items-center mt-3 mb-2">
                 <div class="col-6 justify-content-center">
                     <div class="input-group">
-                        <input type="text" class="form-control" aria-label="Amount" aria-describedby="basic-addon2">
+                        <input type="text" id="amount-add-number" class="form-control" aria-label="Amount" aria-describedby="basic-addon2">
                         <div class="input-group-append">
                           <span class="input-group-text" id="basic-addon2">g</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
-                    <div class="row">
-                        <img src="../images/food_discard.png" id="discard-item">
-                    </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/food_confirm.png" id="confirm-item">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container rounded are-you-sure pt-2 pb-2" id="are-you-sure">
-            <div class="col-12 subtitle">
-                Are you sure?
-            </div>
-            <div class="row align-items-center mt-3 mb-2">
-                <div class="col-6 justify-content-center are-you-sure-text">
-                    Do you want to delete this food item?
-                </div>
-                <div class="col-3 justify-content-center">
-                    <div class="row">
-                        <img src="../images/food_confirm.png" id="discard-confirm">
-                    </div>
-                </div>
-                <div class="col-3 justify-content-center">
-                    <div class="row">
-                        <img src="../images/food_cancel.png" id="discard-cancel">
+                        <img src="../images/food_confirm.png" id="confirm-add-item">
                     </div>
                 </div>
             </div>
