--- a/public/food/main.html
+++ b/public/food/main.html
@@ -200,11 +200,11 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4 nutrition-name">
-                    Proteins
+                    Calories
                 </div>
                 <div class="col-8">
-                    <div class="text-success">
-                        OK
+                    <div class="text-danger">
+                        Too much
                     </div>
                     <div>
                         It has the right amount!
@@ -226,14 +226,27 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4 nutrition-name">
-                    Calories
+                    Carbs
                 </div>
                 <div class="col-8">
                     <div class="text-danger">
-                        Too much
+                        OK
                     </div>
                     <div>
                         Have less tomorrow.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-4 nutrition-name">
+                    Proteins
+                </div>
+                <div class="col-8">
+                    <div class="text-success">
+                        OK
+                    </div>
+                    <div>
+                        It has the right amount!
                     </div>
                 </div>
             </div>
@@ -243,6 +256,7 @@
             <div class="col-12 subtitle">
                 Analysis
             </div>
+
         <div class="row mt-3">
             <div class="col-4"></div>
             <div class="col-3 axis-value text-start">
@@ -273,66 +287,7 @@
             <div class="col-3 value-highlight-right">
             </div>
         </div>
-        <div class="row mt-3">
-            <div class="col-4"></div>
-            <div class="col-3 axis-value text-start">
-                Too little
-            </div>
-            <div class="col-2 axis-value text-center">
-                OK
-            </div>
-            <div class="col-3 axis-value text-end">
-                Too much
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4 nutrition-name">
-                Proteins
-            </div>
-            <div class="col-8">
-                <img src="../images/axis_new.png" class="axis">
-            </div>
-        </div>
-        <div class="row axis-shift">
-            <div class="col-3 text-end">
-                <div class="nutrition-amount text-center">0g</div>
-            </div>
-            <div class="col-2">
-                <img src="../images/axis_pointer.png" class="axis-pointer">
-            </div>
-            <div class="col-3 value-highlight-wrong">
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-4"></div>
-            <div class="col-3 axis-value text-start">
-                Too little
-            </div>
-            <div class="col-2 axis-value text-center">
-                OK
-            </div>
-            <div class="col-3 axis-value text-end">
-                Too much
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4 nutrition-name">
-                Fats
-            </div>
-            <div class="col-8">
-                <img src="../images/axis_new.png" class="axis">
-            </div>
-        </div>
-        <div class="row axis-shift">
-            <div class="col-3 text-end">
-                <div class="nutrition-amount text-center">0g</div>
-            </div>
-            <div class="col-2">
-                <img src="../images/axis_pointer.png" class="axis-pointer">
-            </div>
-            <div class="col-3 value-highlight-wrong">
-            </div>
-        </div>
+
         <div class="row mt-3">
             <div class="col-4"></div>
             <div class="col-3 axis-value text-start">
@@ -363,14 +318,107 @@
             <div class="col-3 value-highlight-wrong">
             </div>
         </div>
+
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Fats
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight-wrong">
+            </div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Carbs
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight-wrong">
+            </div>
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-4"></div>
+            <div class="col-3 axis-value text-start">
+                Too little
+            </div>
+            <div class="col-2 axis-value text-center">
+                OK
+            </div>
+            <div class="col-3 axis-value text-end">
+                Too much
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4 nutrition-name">
+                Proteins
+            </div>
+            <div class="col-8">
+                <img src="../images/axis_new.png" class="axis">
+            </div>
+        </div>
+        <div class="row axis-shift">
+            <div class="col-3 text-end">
+                <div class="nutrition-amount text-center">0g</div>
+            </div>
+            <div class="col-2">
+                <img src="../images/axis_pointer.png" class="axis-pointer">
+            </div>
+            <div class="col-3 value-highlight-wrong">
+            </div>
+        </div>
         </div>
         <div class="row mt-4 mb-2 title">
             <div class="col-12">
                 Suggestions
             </div>
         </div>
-        <div class="container rounded section-background pt-1 pb-2">
-            <div class="row mt-3">
+        <div class="container-fluid rounded section-background pt-1 pb-2">
+            <div class="scrolling-wrapper row flex-row flex-nowrap mt-3" id="suggestions">
                 <div class="col-3 justify-content-center">
                     <div class="row">
                         <img src="../images/food_item_1.png" class="food-item">
@@ -405,7 +453,34 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-center" id="scroll-suggestion-hint">
+                ← Scroll left/right to view more→
+            </div>
         </div>
+        <div class="container rounded amount-change pt-2 pb-2" id="amount-confirm">
+            <div class="col-12 subtitle">
+                Amount Confirm
+            </div>
+            <div class="row align-items-center mt-3 mb-2">
+                <div class="col-6 justify-content-center">
+                    <div class="input-group">
+                        <input type="text" id="amount-confirm-number" class="form-control" aria-label="Amount" aria-describedby="basic-addon2"  disabled>
+                        <div class="input-group-append">
+                          <span class="input-group-text" id="basic-addon2">g</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center">
+                </div>
+                <div class="col-3 justify-content-center">
+                    <div class="row">
+                        <img src="../images/food_confirm.png" id="confirm-suggestion">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
         <br>
     </div>
 
