minor updates on food section titles

--- a/public/food/main.html
+++ b/public/food/main.html
@@ -325,7 +325,7 @@
         </div>
         <div class="container rounded amount-change pt-2 pb-2" id="amount-confirm">
             <div class="col-12 subtitle">
-                Amount Confirm
+                Confirm & Add to Meals
             </div>
             <div class="row align-items-center mt-3 mb-2">
                 <div class="col-6 justify-content-center">
