--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
         <br><br><br><br>
         <div class="row">
             <a href="/food/main.html">Nutrition</a>
+            <a href="/life/memories.html">Memories</a>
+            <a href="/life/milestones.html">Milestones</a>
         </div>
         <br><br><br><br>
         <div class="d-flex justify-content-center m-5">
